# SimModel

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
cmake/: Sim.cmake  assimp.cmake  glad.cmake  glfw.cmake  glm.cmake  stb_image.cmake
data/: untitled.fbx
example/: CMakeLists.txt  example.cpp
include/: SimGL.hpp
src/: ModelLoad.cpp  SimGL.cpp
